Airflow/logs/dag_id=new_table_and_data_import_dag_v1/run_id=manual__2022-12-26T04:18:10.213040+00:00/task_id=import_data/attempt=1.log
[2022-12-26T04:18:21.254+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: new_table_and_data_import_dag_v1.import_data manual__2022-12-26T04:18:10.213040+00:00 [queued]>
[2022-12-26T04:18:21.271+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: new_table_and_data_import_dag_v1.import_data manual__2022-12-26T04:18:10.213040+00:00 [queued]>
[2022-12-26T04:18:21.271+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2022-12-26T04:18:21.271+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 1
[2022-12-26T04:18:21.272+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2022-12-26T04:18:21.319+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): import_data> on 2022-12-26 04:18:10.213040+00:00
[2022-12-26T04:18:21.327+0000] {standard_task_runner.py:55} INFO - Started process 1425 to run task
[2022-12-26T04:18:21.332+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'new_table_and_data_import_dag_v1', 'import_data', 'manual__2022-12-26T04:18:10.213040+00:00', '--job-id', '81', '--raw', '--subdir', 'DAGS_FOLDER/new_table_and_data_import_dag.py', '--cfg-path', '/tmp/tmp635ui7f5']
[2022-12-26T04:18:21.335+0000] {standard_task_runner.py:83} INFO - Job 81: Subtask import_data
[2022-12-26T04:18:21.447+0000] {task_command.py:389} INFO - Running <TaskInstance: new_table_and_data_import_dag_v1.import_data manual__2022-12-26T04:18:10.213040+00:00 [running]> on host 3a7da4d7a43a
[2022-12-26T04:18:22.082+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=new_table_and_data_import_dag_v1
AIRFLOW_CTX_TASK_ID=import_data
AIRFLOW_CTX_EXECUTION_DATE=2022-12-26T04:18:10.213040+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-12-26T04:18:10.213040+00:00
[2022-12-26T04:18:22.084+0000] {sql.py:253} INFO - Executing: 
            COPY cash_flow
            FROM '/opt/***/Cash Flow.csv''
            DELIMITER ','
            CSV HEADER; 
        
[2022-12-26T04:18:22.106+0000] {base.py:73} INFO - Using connection ID 'financial_database' for task execution.
[2022-12-26T04:18:22.422+0000] {base.py:73} INFO - Using connection ID 'financial_database' for task execution.
[2022-12-26T04:18:22.435+0000] {sql.py:364} INFO - Running statement: 
            COPY cash_flow
            FROM '/opt/***/Cash Flow.csv''
            DELIMITER ','
            CSV HEADER; 
        , parameters: None
[2022-12-26T04:18:22.441+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 369, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ","
LINE 4:             DELIMITER ','
                               ^

[2022-12-26T04:18:22.452+0000] {taskinstance.py:1327} INFO - Marking task as FAILED. dag_id=new_table_and_data_import_dag_v1, task_id=import_data, execution_date=20221226T041810, start_date=20221226T041821, end_date=20221226T041822
[2022-12-26T04:18:22.528+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 81 for task import_data (syntax error at or near ","
LINE 4:             DELIMITER ','
                               ^
; 1425)
[2022-12-26T04:18:22.546+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2022-12-26T04:18:22.576+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
